[package]
name = "yab-backend"
version = "0.0.1"
authors = [
	"Junha Yang <junhayang1@gmail.com>",
	"Jiseok CHOI <jiseok.dev@gmail.com>",
]
edition = "2021"
description = ""

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
rand = "0.8"
serde_json = "1"
tokio = { version = "1.15", features = ["full"] }
axum = "0.4.3"
futures = "0.3"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
