[package]
name = "yab-frontend"
version = "0.0.1"
authors = [
	"Junha Yang <junhayang1@gmail.com>",
	"Jiseok CHOI <jiseok.dev@gmail.com>",
]
edition = "2021"
description = ""

[dependencies]
yew = "0.19"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
